@@ -590,6 +590,7 @@ All:
 - Add wx[F]File{Input,Output}Stream::GetFile() (troelsk).
 - Add wxSocketBase::GetSocket() (Laurent Poujoulat).
 - Add IEEE 754 single/double precision support to wxDataStream classes (net147).
+- Add wxVector<>::const_reverse_iterator (troelsk).
 - Add Nepali translation (Him Prasad Gautam).
 
 All (GUI):
